# rdiff

./: .gitattributes  Cargo.toml  LICENSE  README.md  shell.nix
src/: app.rs  args.rs  helpers.rs  main.rs  ui.rs
