[package]
name = "rdiff3"
version = "0.1.1"
authors = ["Caleb Kornegay <caleb.kornegay@gmail.com>"]
edition = "2021"
description = "Terminal user interface to diff 2 files with a few command line options like hex with variable widths"
license-file = "LICENSE"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.29.0"
similar = "2.2"
tui-input = "0.12.1"
clap = { version = "4.5.37", features = ["derive"] }
sha2 = "0.10.9"
diffy = "0.4.2"
syntect = "5.2.0"
syntect-tui = "3.0.5"
imara-diff = "0.1.8"
